--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# python 3.12.2
 absl-py==2.1.0
 asttokens==2.4.1
 comm==0.2.2
@@ -9,8 +8,11 @@ decorator==5.1.1
 etils==1.8.0
 executing==2.0.1
 fonttools==4.51.0
+freetype-py==2.4.0
 fsspec==2024.3.1
 glfw==2.7.0
+hello-robot-stretch-urdf==0.0.23
+imageio==2.34.1
 importlib_resources==6.4.0
 ipykernel==6.29.4
 ipython==8.24.0
@@ -18,11 +20,13 @@ jedi==0.19.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 kiwisolver==1.4.5
+lxml==5.2.2
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
 mediapy==1.2.0
 mujoco==3.1.5
 nest-asyncio==1.6.0
+networkx==3.3
 numpy==1.26.4
 packaging==24.0
 parso==0.8.4
@@ -33,15 +37,23 @@ prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycollada==0.8
+pyglet==2.0.15
 Pygments==2.18.0
-PyOpenGL==3.1.7
+PyOpenGL==3.1.0
 pyparsing==3.1.2
+pyrender==0.1.45
+pyribbit==0.1.46
 python-dateutil==2.9.0.post0
+PyYAML==6.0.1
 pyzmq==26.0.3
+scipy==1.13.0
 six==1.16.0
 stack-data==0.6.3
 tornado==6.4
 traitlets==5.14.3
+trimesh==4.3.2
 typing_extensions==4.11.0
+urchin==0.0.27
 wcwidth==0.2.13
 zipp==3.18.1
