--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# python 3.10.12
 absl-py==2.1.0
 asttokens==2.4.1
 comm==0.2.2
@@ -5,7 +6,7 @@ contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
-etils==1.8.0
+etils==1.7.0
 executing==2.0.1
 fonttools==4.51.0
 freetype-py==2.4.0
@@ -28,7 +29,7 @@ mujoco==3.1.5
 nest-asyncio==1.6.0
 networkx==3.3
 numpy==1.26.4
-packaging==24.0
+packaging==23.0
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.3.0
